re PR middle-end/44716 (Bootstrap fails with partial inlining (r161382))

2010-10-01  Steve Ellcey  <sje@cup.hp.com>

	PR tree-optimization/44716
	* config/ia64/hpux.h (UNLIKELY_EXECUTED_TEXT_SECTION_NAME): Define.
	(HOT_TEXT_SECTION_NAME): Define.

From-SVN: r164891